@@ -349,7 +349,7 @@ level = info
 ; log file - Configure log file properties.
 [/settings/log/file]
 
-; max size - When file size reaches this it will be truncated to 50% if set to 0 truncation will be disabled.
+; max size - When file size reaches this it will be move to log.old. Set to 0 and rotation will be disabled.
 max size = 0
 
 
