@@ -1,13 +1,14 @@
 package snclient
 
 import (
-	"bufio"
 	"fmt"
 	"os"
 	"time"
 
 	"pkg/humanize"
 )
+
+const rotateCheckInterval = 60 * time.Second
 
 func init() {
 	RegisterModule(&AvailableTasks, "Logrotate", "/settings/log/file", NewLogrotateHandler)
@@ -59,10 +60,13 @@ func (l *LogrotateHandler) Stop() {
 
 func (l *LogrotateHandler) mainLoop() {
 	if l.maxSize <= 0 {
+		log.Tracef("automatic rotation is disabled")
+
 		return
 	}
 
-	ticker := time.NewTicker(10 * time.Second)
+	log.Tracef("starting LogrotateHandler mainLoop")
+	ticker := time.NewTicker(rotateCheckInterval)
 	defer ticker.Stop()
 
 	for {
@@ -73,23 +77,25 @@ func (l *LogrotateHandler) mainLoop() {
 			return
 		case <-ticker.C:
 			// skip rotation if we don't log into a file atm
-			if targetWriter == os.Stdout || targetWriter != os.Stderr {
+			if LogFileHandle == nil {
+				log.Tracef("rotate skipped, file logger not active")
+
 				continue
 			}
 			logFile, _ := l.snc.Config.Section("/settings/log").GetString("file name")
 			fileInfo, err := os.Stat(logFile)
 			if err != nil {
-				log.Tracef("[Logrotate] stat failed: %s: %s", logFile, err.Error())
+				log.Tracef("stat failed: %s: %s", logFile, err.Error())
 
 				continue
 			}
 
-			log.Tracef("[Logrotate] check logfile rotation (threshold %s / current size: %s)",
+			log.Tracef("check logfile rotation (threshold %s / current size: %s)",
 				humanize.IBytes(l.maxSize),
 				humanize.IBytes(uint64(fileInfo.Size())),
 			)
 			if uint64(fileInfo.Size()) > l.maxSize {
-				l.rotate(logFile, l.maxSize/2)
+				l.rotate(logFile)
 			}
 
 			continue
@@ -97,94 +103,30 @@ func (l *LogrotateHandler) mainLoop() {
 	}
 }
 
-func (l *LogrotateHandler) rotate(logFile string, targetsize uint64) {
-	log.Infof("[Logrotate] rotating logfile to %s", humanize.IBytes(targetsize))
+func (l *LogrotateHandler) rotate(logFile string) {
+	log.Debugf("rotating logfile %s", logFile)
 
-	lineCount, err := l.numLines2Remove(logFile, targetsize)
-	if err != nil {
-		log.Errorf("counting lines %s failed: %s", logFile, err.Error())
+	// remove previously rotated logfile
+	os.Remove(logFile + ".old")
 
-		return
-	}
-	log.Tracef("[Logrotate] removing %d lines", lineCount)
+	if LogFileHandle != nil {
+		err := LogFileHandle.Close()
+		if err != nil {
+			log.Errorf("failed to close log handle: %s", err.Error())
 
-	newFile, err := os.OpenFile(logFile+".tmp", os.O_TRUNC|os.O_WRONLY|os.O_CREATE, 0o600)
-	if err != nil {
-		log.Errorf(fmt.Sprintf("failed to open logfile %s.tmp: %s", logFile, err.Error()))
-
-		return
-	}
-	defer os.Remove(logFile + ".tmp")
-
-	file, err := os.Open(logFile)
-	if err != nil {
-		log.Errorf("open %s failed: %s", logFile, err.Error())
-		newFile.Close()
-
-		return
-	}
-
-	skipped := int64(0)
-	scanner := bufio.NewScanner(file)
-	for scanner.Scan() {
-		skipped++
-		if skipped >= lineCount {
-			_, err = newFile.Write(scanner.Bytes())
-			if err != nil {
-				log.Errorf(fmt.Sprintf("failed to write tmp logfile %s.tmp: %s", logFile, err.Error()))
-				newFile.Close()
-
-				return
-			}
-			_, err = newFile.Write([]byte{'\n'})
-			if err != nil {
-				log.Errorf(fmt.Sprintf("failed to write tmp logfile %s.tmp: %s", logFile, err.Error()))
-				newFile.Close()
-
-				return
-			}
-		}
-	}
-	err = newFile.Close()
-	if err != nil {
-		log.Errorf(fmt.Sprintf("failed to write tmp logfile %s.tmp: %s", logFile, err.Error()))
-
-		return
-	}
-
-	err = os.Rename(logFile+".tmp", logFile)
-	if err != nil {
-		log.Errorf(fmt.Sprintf("failed to rename tmp logfile %s.tmp: %s", logFile, err.Error()))
-
-		return
-	}
-}
-
-func (l *LogrotateHandler) numLines2Remove(logFile string, targetsize uint64) (lineCount int64, err error) {
-	fileInfo, err := os.Stat(logFile)
-	if err != nil {
-		return 0, fmt.Errorf("stat %s failed: %s", logFile, err.Error())
-	}
-
-	curSize := uint64(fileInfo.Size())
-	removeSize := curSize - targetsize
-
-	file, err := os.Open(logFile)
-	if err != nil {
-		return 0, fmt.Errorf("open %s failed: %s", logFile, err.Error())
-	}
-
-	defer file.Close()
-
-	sizeCount := uint64(0)
-	scanner := bufio.NewScanner(file)
-	for scanner.Scan() {
-		sizeCount += uint64(len(scanner.Bytes()))
-		lineCount++
-		if sizeCount > removeSize {
-			break
+			return
 		}
 	}
 
-	return lineCount, nil
+	err := os.Rename(logFile, logFile+".old")
+	if err != nil {
+		log.Errorf("failed to rename logfile %s %s.old: %s", logFile, logFile, err.Error())
+
+		return
+	}
+
+	// reopen logfile
+	l.snc.createLogger(l.snc.Config)
+
+	log.Infof("rotated logfile to %s.old", logFile)
 }
